--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,61 @@
-version: '3.3'
+version: '3.8'
 services:
-  db: 
-    image: mysql
+  db:
+    image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: Password123#@!
       MYSQL_DATABASE: cse442_2023_spring_team_m_db
+      MYSQL_USER: appuser
+      MYSQL_PASSWORD: Password123#@!
     volumes:
-          - .docker/db.sql:/docker-entrypoint-initdb.d/db.sql
+      - .docker/db.sql:/docker-entrypoint-initdb.d/db.sql
+      - mysql_data:/var/lib/mysql
     ports:
-      - 33061:3306
-  app: 
+      - "33061:3306"
+    networks:
+      - app-network
+
+  app:
     build: .
     restart: always
+    depends_on:
+      - db
     environment:
       WAIT_HOSTS: db:3306
       MYSQL_ROOT_PASSWORD: Password123#@!
-    ports: 
-      - '443:443'
+      MYSQL_HOST: db
+      MYSQL_DATABASE: cse442_2023_spring_team_m_db
+      MYSQL_USER: appuser
+      MYSQL_PASSWORD: Password123#@!
+    ports:
+      - "443:443"
+      - "80:80"
+    networks:
+      - app-network
+    volumes:
+      - ./uploads:/var/www/html/uploads
+
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    links:
+    restart: always
+    depends_on:
       - db
     ports:
-      - 8082:80
+      - "8082:80"
     environment:
-      MYSQL_PASSWORD: Password123#@!
-      MYSQL_DATABASE: cse442_2023_spring_team_m_db
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_USER: root
+      PMA_PASSWORD: Password123#@!
+      MYSQL_ROOT_PASSWORD: Password123#@!
+    networks:
+      - app-network
+
+volumes:
+  mysql_data:
+
+networks:
+  app-network:
+    driver: bridge
